Workflow was built to ingest OEWS API data into local postgresql database

--- a/.nest/app/BLS_API_pg.ipynb
+++ b/.nest/app/BLS_API_pg.ipynb
@@ -2,27 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.0' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +10,6 @@
     "import os\n",
     "import json\n",
     "import requests\n",
-    "import prettytable\n",
     "import pandas as pd\n",
     "\n",
     "# Load env vars from .env file\n",
@@ -40,8 +19,8 @@
     "BLS_API_KEY  = os.environ.get('BLS_API_KEY')\n",
     "BLS_ENDPOINT = os.environ.get('BLS_ENDPOINT')\n",
     "\n",
-    "# fetch data from BLS API\n",
-    "def fetch_BLS_data(series, **kwargs):\n",
+    "# fetch oews_data from BLS API\n",
+    "def fetch_oews_data(series, **kwargs):\n",
     "    \"\"\"\n",
     "    Pass in a list of BLS timeseries to fetch data and return the series\n",
     "    in JSON format. Arguments can also be provided as kwargs:\n",
@@ -81,75 +60,50 @@
     "    return result\n",
     "\n",
     "\n",
-    "series = ['OEUS250000000000013108211', 'OEUS250000000000013116111', 'OEUS250000000000013201111', \n",
-    "          'OEUS250000000000013205111', 'OEUS250000000000015122111', 'OEUS250000000000015209911', \n",
+    "oews_series = ['OEUS250000000000013108211', 'OEUS250000000000013116111', 'OEUS250000000000013201111', \n",
+    "          'OEUS250000000000013205111', 'OEUS250000000000015122111', 'OEUS250000000000015205111', \n",
     "          'OEUS250000000000017207111', 'OEUS250000000000019102911', 'OEUS250000000000019201211',\n",
     "          'OEUS250000000000019301111', 'OEUS250000000000019303911', 'OEUS250000000000019309411',\n",
-    "          'OEUS250000000000025112311', 'OEUS250000000000025112611']\n",
+    "          'OEUS250000000000025112311', 'OEUS250000000000025112611', 'OEUS250000000000025112511']\n",
     "\n",
-    "data = fetch_BLS_data(series, startyear = 2023, endyear = 2023)\n",
+    "series_occupation = ['Project Management Specialist', 'Market Research Analysts and Marketing Specialists', 'Accountants and Auditors',\n",
+    "                     'Financial and Investment Analysts', 'Computer and Information Research Scientists', 'Data Scientist',\n",
+    "                     'Electrical Engineers', 'Biological Scientists', 'Physicists', 'Economists', 'Psychologists', 'Political Scientists', \n",
+    "                     'English Language and Literature Teachers, Postsecondary', 'Philosophy and Religion Teachers, Postsecondary', 'History Teachers, Postsecondary']\n",
     "\n",
-    "if data:\n",
-    "    # Parse data as needed\n",
-    "    series = data.get(\"Results\", {}).get(\"series\", [])\n",
+    "# create dict associating seriesID to respective occupation\n",
+    "series_to_occupation = dict(zip(oews_series, series_occupation))\n",
+    "\n",
+    "# fetch respective\n",
+    "oews_data = fetch_oews_data(oews_series, startyear = 2023, endyear = 2023)\n",
+    "\n",
+    "if oews_data:\n",
+    "    # pull series data from inside the Results tree\n",
+    "    oews_series_pull = oews_data.get(\"Results\", {}).get(\"series\", [])\n",
+    "\n",
+    "    # create empty results list\n",
     "    results = []\n",
-    "    for item in series:\n",
+    "\n",
+    "    # comb through each element in series and pull out specific details\n",
+    "    for item in oews_series_pull:\n",
+    "        series_id = item.get('seriesID')\n",
+    "        occupation = series_to_occupation.get(series_id)\n",
+    "\n",
+    "        # pull info one level down in data\n",
     "        for entry in item.get(\"data\", []):\n",
     "            results.append({\n",
-    "                \"year\": entry.get(\"year\"),\n",
-    "                \"period\": entry.get(\"period\"),\n",
-    "                \"value\": entry.get(\"value\"),\n",
-    "                \"footnotes\": entry.get(\"footnotes\")\n",
+    "                \"occupation_name\": occupation,\n",
+    "                \"occupation_seriesid\": series_id,\n",
+    "                \"salary\": entry.get(\"value\"),\n",
+    "                \"year\": entry.get(\"year\")\n",
     "            })\n",
+    "        # for name in series_occupation:\n",
+    "        #     results.append({\n",
+    "        #         \"occupation\": name\n",
+    "        #     })\n",
     "    \n",
     "    # Convert to DataFrame for easier handling\n",
-    "    df = pd.DataFrame(results)\n",
-    "    print(df)\n",
-    "#     return df\n",
-    "# return None\n",
-    "\n",
-    "print(json.dumps(data, indent=2))\n",
-    "\n",
-    "#     headers = {\n",
-    "#         \"Content-Type\": \"application/json\",\n",
-    "#     }\n",
-    "#     payload = {\n",
-    "#         \"seriesid\": [series_id],\n",
-    "#         \"startyear\": \"2023\",\n",
-    "#         \"endyear\": \"2023\",\n",
-    "#         \"registrationkey\": BLS_API_key\n",
-    "#     }\n",
-    "    \n",
-    "#     response = requests.post(BASE_URL, json=payload, headers=headers)\n",
-    "#     if response.status_code == 200:\n",
-    "#         return response.json()\n",
-    "#     else:\n",
-    "#         print(f\"Failed to fetch data: {response.status_code}, {response.text}\")\n",
-    "#         return None\n",
-    "\n",
-    "# def get_mass_occupation_data():\n",
-    "#     series_id = \"NWU371674020200000000002505000\"\n",
-    "#     # series_id = \"OEUM0000000000000003\"\n",
-    "#     data = fetch_salary_data(series_id)\n",
-    "\n",
-    "#     if data:\n",
-    "#         # Parse data as needed\n",
-    "#         series = data.get(\"Results\", {}).get(\"series\", [])\n",
-    "#         results = []\n",
-    "#         for item in series:\n",
-    "#             for entry in item.get(\"data\", []):\n",
-    "#                 results.append({\n",
-    "#                     \"year\": entry.get(\"year\"),\n",
-    "#                     \"period\": entry.get(\"period\"),\n",
-    "#                     \"value\": entry.get(\"value\"),\n",
-    "#                     \"footnotes\": entry.get(\"footnotes\")\n",
-    "#                 })\n",
-    "        \n",
-    "#         # Convert to DataFrame for easier handling\n",
-    "#         df = pd.DataFrame(results)\n",
-    "#         print(df)\n",
-    "#         return df\n",
-    "#     return None\n",
+    "    oews_df = pd.DataFrame(results)\n",
     "\n",
     "# # Run the function\n",
     "# if __name__ == \"__main__\":\n",
@@ -158,16 +112,250 @@
     "#         # print(df) #df.to_csv(\"massachusetts_salaries.csv\", index=False)\n",
     "#         # print(\"Data saved to massachusetts_salaries.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                      occupation_name  \\\n",
+      "0                       Project Management Specialist   \n",
+      "1   Market Research Analysts and Marketing Special...   \n",
+      "2                            Accountants and Auditors   \n",
+      "3                   Financial and Investment Analysts   \n",
+      "4        Computer and Information Research Scientists   \n",
+      "5                                      Data Scientist   \n",
+      "6                                Electrical Engineers   \n",
+      "7                               Biological Scientists   \n",
+      "8                                          Physicists   \n",
+      "9                                          Economists   \n",
+      "10                                      Psychologists   \n",
+      "11                               Political Scientists   \n",
+      "12  English Language and Literature Teachers, Post...   \n",
+      "13    Philosophy and Religion Teachers, Postsecondary   \n",
+      "14                    History Teachers, Postsecondary   \n",
+      "\n",
+      "          occupation_seriesid  salary  year  \n",
+      "0   OEUS250000000000013108211   61320  2023  \n",
+      "1   OEUS250000000000013116111   47780  2023  \n",
+      "2   OEUS250000000000013201111   62480  2023  \n",
+      "3   OEUS250000000000013205111   66270  2023  \n",
+      "4   OEUS250000000000015122111  132430  2023  \n",
+      "5   OEUS250000000000015205111   75540  2023  \n",
+      "6   OEUS250000000000017207111   77930  2023  \n",
+      "7   OEUS250000000000019102911   64120  2023  \n",
+      "8   OEUS250000000000019201211   98280  2023  \n",
+      "9   OEUS250000000000019301111   77180  2023  \n",
+      "10  OEUS250000000000019303911   51580  2023  \n",
+      "11  OEUS250000000000019309411   65850  2023  \n",
+      "12  OEUS250000000000025112311   59840  2023  \n",
+      "13  OEUS250000000000025112611   61700  2023  \n",
+      "14  OEUS250000000000025112511   63230  2023  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(oews_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connect to DB & Create new table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "OEWS data inserted into DB\n",
+      "'Connection' object has no attribute 'cursor'\n",
+      "Database connection closed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import config\n",
+    "import psycopg2\n",
+    "from configparser import ConfigParser\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "\n",
+    "def config(filename='database.ini', section='postgresql'):\n",
+    "    # create file parser\n",
+    "    parser = ConfigParser()\n",
+    "\n",
+    "    # read config file\n",
+    "    parser.read(filename)\n",
+    "\n",
+    "    # get section, default to postgresql\n",
+    "    db_params = {}\n",
+    "    if parser.has_section(section):\n",
+    "        params = parser.items(section)\n",
+    "        for param in params:\n",
+    "            db_params[param[0]] = param[1]\n",
+    "    else:\n",
+    "        raise Exception('Section {0} not found in {1} file'.format(section, filename))\n",
+    "    \n",
+    "    return db_params\n",
+    "\n",
+    "\n",
+    "def connect():\n",
+    "    \"\"\" Connect to PostgreSQL database server\"\"\"\n",
+    "    conn = None\n",
+    "    # read config params\n",
+    "    db_params = config()\n",
+    "\n",
+    "    # Create the connection string\n",
+    "    conn_string = f\"postgresql+psycopg2://{db_params['user']}:{db_params['password']}@{db_params['host']}:{db_params['port']}/{db_params['database']}\"\n",
+    "\n",
+    "    try:\n",
+    "        \n",
+    "        engine = create_engine(conn_string)\n",
+    "        \n",
+    "        # establish engine connection\n",
+    "        conn = engine.connect()\n",
+    "        print('Connection successful!')\n",
+    "        \n",
+    "        # create \n",
+    "        oews_df.to_sql('occupation_salaries', con=conn, if_exists='replace', index=False)\n",
+    "        print(\"OEWS data inserted into DB\")\n",
+    "\n",
+    "        conn.autocommit = True\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        sql_request = '''select * from occupation_salaries;'''\n",
+    "        cursor.execute(sql_request)\n",
+    "        for i in cursor.fetchall():\n",
+    "            print(i)\n",
+    "\n",
+    "        # Close cursor and communication with DB\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "    # connect to PostgreSQL server\n",
+    "    # print('Connecting to PostgreSQL database...')\n",
+    "    # conn = psycopg2.connect(**db_params)\n",
+    "\n",
+    "    # cur = conn.cursor()\n",
+    "\n",
+    "    # execute statement to verify connection\n",
+    "    # cur.execute(\"\"\"CREATE TABLE occupation_salaries(\n",
+    "    #             occupation_id SERIAL PRIMARY KEY,\n",
+    "    #             occupation_name VARCHAR(75) UNIQUE NOT NULL,\n",
+    "    #             occupation_seriesid VARCHAR(30) NOT NULL,\n",
+    "    #             salary SMALLINT NOT NULL);\n",
+    "    #             \"\"\")\n",
+    "\n",
+    "    # conn = psycopg2.connect(conn_string)\n",
+    "\n",
+    "    # # Commit changes to DB\n",
+    "    # # conn.commit()\n",
+    "\n",
+    "    # # cursor.execute(\"SELECT * FROM oews_df\")\n",
+    "    \n",
+    "    except (Exception, psycopg2.DatabaseError) as error :\n",
+    "        print(error)\n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "            print('Database connection closed.')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    connect()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert OEWS Salary into island table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.to_sql of     year   value                  series_id  \\\n",
+      "0   2023   61320  OEUS250000000000013108211   \n",
+      "1   2023   47780  OEUS250000000000013116111   \n",
+      "2   2023   62480  OEUS250000000000013201111   \n",
+      "3   2023   66270  OEUS250000000000013205111   \n",
+      "4   2023  132430  OEUS250000000000015122111   \n",
+      "5   2023   75540  OEUS250000000000015205111   \n",
+      "6   2023   77930  OEUS250000000000017207111   \n",
+      "7   2023   64120  OEUS250000000000019102911   \n",
+      "8   2023   98280  OEUS250000000000019201211   \n",
+      "9   2023   77180  OEUS250000000000019301111   \n",
+      "10  2023   51580  OEUS250000000000019303911   \n",
+      "11  2023   65850  OEUS250000000000019309411   \n",
+      "12  2023   59840  OEUS250000000000025112311   \n",
+      "13  2023   61700  OEUS250000000000025112611   \n",
+      "\n",
+      "                                           occupation  \n",
+      "0                       Project Management Specialist  \n",
+      "1   Market Research Analysts and Marketing Special...  \n",
+      "2                            Accountants and Auditors  \n",
+      "3                   Financial and Investment Analysts  \n",
+      "4        Computer and Information Research Scientists  \n",
+      "5                                      Data Scientist  \n",
+      "6                                Electrical Engineers  \n",
+      "7                               Biological Scientists  \n",
+      "8                                          Physicists  \n",
+      "9                                          Economists  \n",
+      "10                                      Psychologists  \n",
+      "11                               Political Scientists  \n",
+      "12  English Language and Literature Teachers, Post...  \n",
+      "13    Philosophy and Religion Teachers, Postsecondary  >\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_sql('oews_df', con=conn, if_exists='replace', index=False)\n",
+    "\n",
+    "cursor.execute(\"SELECT * FROM oews_df\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".nest",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.0"
   }
  },
