New text based workflows were created to create student account and login page

--- a/.nest/app/BLS_API_pg.ipynb
+++ b/.nest/app/BLS_API_pg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,50 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                      occupation_name  \\\n",
-      "0                       Project Management Specialist   \n",
-      "1   Market Research Analysts and Marketing Special...   \n",
-      "2                            Accountants and Auditors   \n",
-      "3                   Financial and Investment Analysts   \n",
-      "4        Computer and Information Research Scientists   \n",
-      "5                                      Data Scientist   \n",
-      "6                                Electrical Engineers   \n",
-      "7                               Biological Scientists   \n",
-      "8                                          Physicists   \n",
-      "9                                          Economists   \n",
-      "10                                      Psychologists   \n",
-      "11                               Political Scientists   \n",
-      "12  English Language and Literature Teachers, Post...   \n",
-      "13    Philosophy and Religion Teachers, Postsecondary   \n",
-      "14                    History Teachers, Postsecondary   \n",
-      "\n",
-      "          occupation_seriesid  salary  year  \n",
-      "0   OEUS250000000000013108211   61320  2023  \n",
-      "1   OEUS250000000000013116111   47780  2023  \n",
-      "2   OEUS250000000000013201111   62480  2023  \n",
-      "3   OEUS250000000000013205111   66270  2023  \n",
-      "4   OEUS250000000000015122111  132430  2023  \n",
-      "5   OEUS250000000000015205111   75540  2023  \n",
-      "6   OEUS250000000000017207111   77930  2023  \n",
-      "7   OEUS250000000000019102911   64120  2023  \n",
-      "8   OEUS250000000000019201211   98280  2023  \n",
-      "9   OEUS250000000000019301111   77180  2023  \n",
-      "10  OEUS250000000000019303911   51580  2023  \n",
-      "11  OEUS250000000000019309411   65850  2023  \n",
-      "12  OEUS250000000000025112311   59840  2023  \n",
-      "13  OEUS250000000000025112611   61700  2023  \n",
-      "14  OEUS250000000000025112511   63230  2023  \n"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'set_option'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/hs/5h3f6hnn6tlf80f689qw1lh80000gn/T/ipykernel_65035/987334353.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moews_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_option\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'display.max_columns'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Show all columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moews_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/dev-ops/young-grasshopper/.nest/lib/python3.13/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6295\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6296\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6297\u001b[0m         \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6298\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6299\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'set_option'"
      ]
     }
    ],
    "source": [
+    "oews_df.pd.set_option('display.max_columns', None)  # Show all columns\n",
     "print(oews_df)"
    ]
   },
@@ -171,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,44 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method NDFrame.to_sql of     year   value                  series_id  \\\n",
-      "0   2023   61320  OEUS250000000000013108211   \n",
-      "1   2023   47780  OEUS250000000000013116111   \n",
-      "2   2023   62480  OEUS250000000000013201111   \n",
-      "3   2023   66270  OEUS250000000000013205111   \n",
-      "4   2023  132430  OEUS250000000000015122111   \n",
-      "5   2023   75540  OEUS250000000000015205111   \n",
-      "6   2023   77930  OEUS250000000000017207111   \n",
-      "7   2023   64120  OEUS250000000000019102911   \n",
-      "8   2023   98280  OEUS250000000000019201211   \n",
-      "9   2023   77180  OEUS250000000000019301111   \n",
-      "10  2023   51580  OEUS250000000000019303911   \n",
-      "11  2023   65850  OEUS250000000000019309411   \n",
-      "12  2023   59840  OEUS250000000000025112311   \n",
-      "13  2023   61700  OEUS250000000000025112611   \n",
-      "\n",
-      "                                           occupation  \n",
-      "0                       Project Management Specialist  \n",
-      "1   Market Research Analysts and Marketing Special...  \n",
-      "2                            Accountants and Auditors  \n",
-      "3                   Financial and Investment Analysts  \n",
-      "4        Computer and Information Research Scientists  \n",
-      "5                                      Data Scientist  \n",
-      "6                                Electrical Engineers  \n",
-      "7                               Biological Scientists  \n",
-      "8                                          Physicists  \n",
-      "9                                          Economists  \n",
-      "10                                      Psychologists  \n",
-      "11                               Political Scientists  \n",
-      "12  English Language and Literature Teachers, Post...  \n",
-      "13    Philosophy and Religion Teachers, Postsecondary  >\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mto_sql(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moews_df\u001b[39m\u001b[38;5;124m'\u001b[39m, con\u001b[38;5;241m=\u001b[39mconn, if_exists\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreplace\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSELECT * FROM oews_df\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
